TAG: annotload-tr6839-1
DATE: 07/05/2010
STAFF: sc
CHANGES:
1) annotload.csh - check that ANNOTINPUTFILE exists
2) annotload.py - if columns > 10 get col 10 aka ldb

TAG: annotload-tr6839-BP
DATE: 04/29/2010
STAFF: sc
CHANGES: Branch point tag for marker types

TAG: annotload-4-3-3-2
DATE: 04/13/2010
STAFF: lec
CHANGES:
a) TR9777/config.default

TAG: annotload-4-3-3-1
DATE: 03/31/2010
STAFF: lec
CHANGES:
a) fixed deletion of annot/evidence

TAG: annotload-3-5-1-4
DATE: 11/20/2006
STAFF: lec
CHANGES:
a) fix check of loadObsoleteTerms

TAG: annotload-3-5-1-3
DATE: 10/30/2006
STAFF: lec
CHANGES:
a) added delete mode

TAG: annotload-3-5-1-2
DATE: 10/25/2006
STAFF: lec
CHANGES:
a) added delete mode

TAG: annotload-3-5-1-1
DATE: 10/23/2006
STAFF: lec
CHANGES:
a) merged TR7894 branch

TAG: annotload-tr7894-6
DATE: 10/17/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig
b) install lib_py_dataload-3-5-1-1 w/ this tag

TAG: annotload-tr7894-5
TAG: annotload-tr7894-4
TAG: annotload-tr7894-3
DATE: 09/29/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig

TAG: annotload-tr7894-2
TAG: annotload-tr7894-1
DATE: 09/12/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig

TAG: annotload-tr7894-6
DATE: 10/17/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig
b) install lib_py_dataload-3-5-1-1 w/ this tag

TAG: annotload-tr7894-5
TAG: annotload-tr7894-4
TAG: annotload-tr7894-3
DATE: 09/29/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig

TAG: annotload-tr7894-2
TAG: annotload-tr7894-1
DATE: 09/12/2006
STAFF: lec
CHANGES:
a) TR7894; mgiconfig

TAG: annotload-BP-tr7894
DATE: 09/12/2006
STAFF: lec
CHANGES:
a) branch point tag

TAG: annotload-3-5-0-3
DATE: 09/12/2006
STAFF: lec
CHANGES:
a) pre-load annotDict, evidenceDict, objectDict; faster performance

TAG: annotload-3-5-0-2
DATE: 08/30/2006
STAFF: lec
CHANGES:
a) pre-load annotDict, evidenceDict, objectDict; faster performance

TAG: annotload-3-5-0-1
DATE: 04/20/2006
STAFF: lec
CHANGES:
a) MGi 3.5; mergee tr7062 branch

TAG: annotload-3-2-0-3
DATE: 11/21/2005